fix alignment issue. add bg image

--- a/css/app.css
+++ b/css/app.css
@@ -172,6 +172,19 @@ html, body {
 	font-size: 2em;
 }
 
+#easyView .panel-image{
+	text-align:right;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+#easyView .panel-text{
+	border-radius: 5px;
+	padding:2px;
+	background-color:rgba(0,0,0,0.7);
+}
+
 #easyView .panel-body {
 	padding-left: 0px;
 	margin-right: 20px;
@@ -236,8 +249,20 @@ html, body {
 	background-color:rgba(0,0,0,0.2);
     border-width: 5px;
     border-radius: 50%;
+    border-top-left-radius: 50%; 
+	border-top-right-radius: 50%; 
+	border-bottom-left-radius: 50%; 
+	border-bottom-right-radius: 50%;
     -webkit-border-radius:50%;
+    -webkit-border-top-left-radius: 50%; 
+	-webkit-border-top-right-radius: 50%; 
+	-webkit-border-bottom-left-radius: 50%; 
+	-webkit-border-bottom-right-radius: 50%;
     -moz-border-radius:50%;
+    -moz-border-top-left-radius: 50%; 
+	-moz-border-top-right-radius: 50%; 
+	-moz-border-bottom-left-radius: 50%; 
+	-moz-border-bottom-right-radius: 50%;
 	padding: 20px;
 	width: 200px;
 	height: 205px;
@@ -249,18 +274,43 @@ html, body {
 	margin-bottom: 10px;
 	margin-top: 10px;
 	color: white;
+	overflow: hidden;
 	z-index: 1000;
 
 }
 #easyView .tCircle ::before{
 	border-radius: 50%;
+	border-top-left-radius: 50%; 
+	border-top-right-radius: 50%; 
+	border-bottom-left-radius: 50%; 
+	border-bottom-right-radius: 50%;
     -webkit-border-radius:50%;
+    -webkit-border-top-left-radius: 50%; 
+	-webkit-border-top-right-radius: 50%; 
+	-webkit-border-bottom-left-radius: 50%; 
+	-webkit-border-bottom-right-radius: 50%;
     -moz-border-radius:50%;
+    -moz-border-top-left-radius: 50%; 
+	-moz-border-top-right-radius: 50%; 
+	-moz-border-bottom-left-radius: 50%; 
+	-moz-border-bottom-right-radius: 50%;
 }
 #easyView .tCircle ::after{
 	border-radius: 50%;
+    border-top-left-radius: 50%; 
+	border-top-right-radius: 50%; 
+	border-bottom-left-radius: 50%; 
+	border-bottom-right-radius: 50%;
     -webkit-border-radius:50%;
+    -webkit-border-top-left-radius: 50%; 
+	-webkit-border-top-right-radius: 50%; 
+	-webkit-border-bottom-left-radius: 50%; 
+	-webkit-border-bottom-right-radius: 50%;
     -moz-border-radius:50%;
+    -moz-border-top-left-radius: 50%; 
+	-moz-border-top-right-radius: 50%; 
+	-moz-border-bottom-left-radius: 50%; 
+	-moz-border-bottom-right-radius: 50%;
 }
 
 #easyView .tCircle span{
