--- a/css/beachTheme.css
+++ b/css/beachTheme.css
@@ -87,6 +87,10 @@
 	color: black;
 }
 
+#easyView .panel-text{
+	background-color:rgba(102, 255, 255,0.7);
+}
+
 #easyView .panel-heading {
 	background-color: rgba(102, 255, 255,0.2);
 	color: black;
